--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@adiwajshing/baileys": "^5.0.0",
     "@bot-whatsapp/bot": "0.1.3-alpha.13",
     "@bot-whatsapp/provider-baileys": "0.1.3-alpha.13",
     "@builderbot-plugins/openai-agents": "^1.0.0",
-    "@builderbot-plugins/telegram": "0.2.13-alpha.0",
+    "axios": "^1.7.2",
+    "chatgpt": "^5.2.5",
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.2",
+    "fs": "^0.0.1-security",
     "openai": "^4.27.0"
   },
   "devDependencies": {
